--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@
   --color-lightOrange: #fca99b;
   --color-shop_light_green: #3b9c3c;
   --color-dark_blue: #6c7fd8;
+  --color-shop_lighter_bg: #f1f3f8;
 }
 
 @theme inline {
